# compatibility-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml  settings.yml
.github/actions/prepare-dotnet/: action.yaml
.github/workflows/: codeql-dotnet.yaml  codeql-java.yaml  codeql-javascript.yaml  codeql-python.yaml  codeql-ruby.yaml  release-github.yaml  release-github.yml  release-mvn.yaml  release-mvn.yml  release-npm.yml  release-nuget.yaml  release-pypi.yaml  release-ruby.yml  release-rubygem.yaml  release-rubygem.yml  test-devkit.yml  test-dotnet.yml  test-java.yaml  test-java.yml  test-python.yaml  test-python.yml  test-ruby.yaml  test-ruby.yml
devkit/: .ci_env  README.md  eslint.config.mjs  generate.mjs  package-lock.json  package.json  samples.spec.ts  tsconfig.json  validate.mjs  vitest.config.ts
devkit/samples/all-statuses/: all-statuses.feature  all-statuses.ndjson
devkit/samples/ambiguous/: ambiguous.ndjson  ambiguous.ts
devkit/samples/attachments/: attachments.feature  attachments.feature.ndjson  attachments.feature.ts  attachments.ndjson  attachments.ts
devkit/src/: Clock.ts  ExecutionContext.ts  GlobalContext.ts  PendingException.ts  Runner.ts  SkippedException.ts  Stopwatch.ts  TestRunImpl.ts  World.ts  WorldImpl.ts  cli.ts  formatFullStackTrace.ts  generate.ts  index.ts  loadSources.ts  loadSupport.ts  makeSnippet.ts  makeSnippets.ts  meta.ts  prepareTestRun.ts  run.ts  state.ts  types.ts  validate.ts
devkit/test/: samples.test.ts
dotnet/: .editorconfig  Cucumber.CCK.slnx  Directory.Build.props  NuGet.Config
dotnet/Cucumber.CCK/: Cucumber.CCK.csproj  Cucumber.CCK.slnx  Cucumber.CCK.snk  LICENSE  README.md
dotnet/Cucumber.CCK.Tests/: Cucumber.CCK.Tests.csproj  README.md  SamplesTests.cs
java/: pom.xml
javascript/: README.md  package-lock.json  package.json
python/: README.md  pyproject.toml
python/src/cck/: examples.py
python/src/cucumber_compatibility_kit/: __init__.py  compatibility_kit.py  examples.py
python/src/cucumber_compatibility_kit/features/: .gitignore
python/tests/: conftest.py  test_files.py
ruby/: .rubocop.yml  .rubocop_todo.yml  Gemfile  README.md  Rakefile  VERSION  cucumber-compatibility-kit.gemspec
ruby/features/: .gitignore
ruby/lib/: cucumber-compatibility-kit.rb  cucumber_compatibility_kit.rb  keys_checker.rb  messages_comparator.rb  shared_examples.rb
ruby/spec/: capture_warnings.rb  cucumber-compatibility-kit_spec.rb  cucumber_compatibility_kit_spec.rb  keys_checker_spec.rb  messages_comparator_spec.rb
ruby/templates/: specs.rb
samples/attachments/: attachments.feature.ndjson
samples/data-tables/: data-tables.feature.ndjson
samples/examples-tables/: examples-tables.feature.ndjson
samples/hooks/: hooks.feature.ndjson
samples/markdown/: markdown.feature.md.ndjson
samples/minimal/: minimal.feature.ndjson
samples/parameter-types/: parameter-types.feature.ndjson
samples/pending/: pending.feature.ndjson
samples/retry/: retry.feature.ndjson
samples/rules/: rules.feature.ndjson
samples/skipped/: skipped.feature.ndjson
samples/stack-traces/: stack-traces.feature.ndjson
samples/undefined/: undefined.feature.ndjson
samples/unknown-parameter-type/: unknown-parameter-type.feature.ndjson
src/: validate.ts
(+175 files in other folders)
